<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>