<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15">

        <StackView
            android:id="@+id/stackView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:loopViews="true" />

        <TextView
            android:id="@+id/bannerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom|center"
            android:text="@string/your_favorite"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@color/colorPrimaryDark"
            android:gravity="top|center"
            android:text="@string/widget_hint"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/no_favorite_message"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

</FrameLayout>
